# interpreter-rankN-type-check

./: README.md  interpreter.cabal
app/: Eval.hs  Lexer.x  Main.hs  Parser.y  Syntax.hs  TypeCheck.hs  memo
app/TypeCheck/: TcMonad.hs  TcTerm.hs
