name:                interpreter
version:             0.1.0.0
build-type:          Simple
extra-source-files:  app/Parser.y
                     app/Lexer.x
cabal-version:       >=1.10

executable interpreter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , array
                     , containers
                     , mtl
                     , either
                     , transformers
                     , exceptions
  default-language:    Haskell2010
  build-tools:         happy, alex
  other-modules:       Parser
                     , Lexer
                     , Eval
                     , Syntax
                     , TypeCheck
                     , TypeCheck.TcMonad
                     , TypeCheck.TcTerm

